--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Hello</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae, animi?</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae, animi?</p>
 </body>
 </html>
