feat: add lorem description

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Commodi, amet autem obcaecati repellat maiores similique debitis nam maxime expedita adipisci?</p>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Commodi, amet autem obcaecati repellat maiores similique debitis nam maxime expedita adipisci?</p>
 </body>
 </html>
